# lifeverse-task

./: .env  .gitignore  README.md  config.json  config.json.example  dockerfile  flask_app.py  model_loader.py  pyproject.toml  requirements.txt  streamlit_app.py
cicd/: deploy.yaml  pr-checks.yaml  release.yaml
tests/: test_flask_app.py  test_streamlit_app.py
